Update API server methods, document corrections of datatypos, update label generator scripts
